Adds ubuntu-latest to runners.

--- a/dimo-build-runners/templates/runner-large.yaml
+++ b/dimo-build-runners/templates/runner-large.yaml
@@ -18,6 +18,7 @@ spec:
       organization: DIMO-Network
       labels:
         - large
+        - ubuntu-latest
       containers:
         - name: runner
           env: []
@@ -41,6 +42,6 @@ spec:
   minReplicas: 0
   maxReplicas: 1
   metrics:
-  - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
-    repositoryNames:
-    - Macaron
+    - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
+      repositoryNames:
+        - Macaron
