--- a/dimo-build-runners/templates/runner-small.yaml
+++ b/dimo-build-runners/templates/runner-small.yaml
@@ -18,6 +18,7 @@ spec:
       organization: DIMO-Network
       labels:
         - small
+        - ubuntu-latest
       containers:
         - name: runner
           env: []
