--- a/dimo-build-runners/templates/runner-small.yaml
+++ b/dimo-build-runners/templates/runner-small.yaml
@@ -43,7 +43,7 @@ spec:
   maxReplicas: 3
   metrics:
     - type: PercentageRunnersBusy
-      scaleUpThreshold: "1"
-      scaleDownThreshold: ".5"
-      scaleUpFactor: "1"
-      scaleDownFactor: "1"
+      scaleUpThreshold: "0.75"
+      scaleDownThreshold: "0.25"
+      scaleUpFactor: "2"
+      scaleDownFactor: "0.5"
