Add sample-enclave-api to build

--- a/dimo-build-runners/templates/runner-medium-enclave.yaml
+++ b/dimo-build-runners/templates/runner-medium-enclave.yaml
@@ -56,3 +56,4 @@ spec:
     - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
       repositoryNames:
         - synthetic-wallet-enclave
+        - sample-enclave-api
